...
    
    var body: some View {
        TabView {
            TripSubmissionView()
                .tabItem {
                    Image(systemName: "plus.circle")
                    Text("New Trip")
                }
            
            TripsListView()
                .tabItem {
                    Image(systemName: "list.bullet")
                    Text("My Trips")
...
